--- a/invoicesproject/templates/client/list.html
+++ b/invoicesproject/templates/client/list.html
@@ -10,7 +10,7 @@
 <div class="grid-container">
     <div class="grid-x grid-margin-x" style="margin-top: 1em;">
         <!-- primer bloque pantalla -->
-        <div class="cell small-12 large-8">
+        <div class="cell small-12 large-12">
 
             <!-- bloque de buscador -->
             <form class="input-group" method="GET">{% csrf_token %}
@@ -23,24 +23,32 @@
 
             <!-- inicio bloque de resultados de busqueda -->
             <div class="grid-x grid-margin-x">
-                <h2>Clientes</h2>
+                <div class="cell small-12 large-12">
+                    <h2>Clientes</h2>
+                </div>
                 <table class="hover">
                     <thead>
                         <tr>
                         <th width="150">Alias</th>
                         <th width="200">Name</th>
                         <th width="150">Documento</th>
+                        <th width="50"></th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for client in clients  %}                    
                         <tr>
                             <td>{{ client.alias }}</td>
-                            <td><a href="">{{ client.name | truncatechars:200}}</a></td>
+                            <td><a href="{% url 'client_app:client-update' client.id %}">{{ client.name | truncatechars:200}}</a></td>
                             <td>{{ client.cif }}</td>
+                            <td><a href="{% url 'client_app:client-delete' client.id %}">Eliminar</a></td>                                             
                         </tr>
                         {% empty %}
-                        <h3 style="color:red;">No hay resultados</h3>
+                        <tr>
+                            <td colspan="3">
+                                <h3 style="color:red;">No hay resultados</h3>
+                            </td>
+                        </tr>                        
                         {% endfor %}
                     </tbody>
                 </table>
