--- a/invoicesproject/templates/includes/header.html
+++ b/invoicesproject/templates/includes/header.html
@@ -10,7 +10,7 @@
                 <li><a href="#">Clientes</a>
                     <ul class="menu">
                         <li><a href="{% url 'client_app:client-list' %}">Listado</a></li>
-                        <li><a href="{% url 'client_app:client-list' %}">Nuevo</a></li>
+                        <li><a href="{% url 'client_app:client-add' %}">Nuevo</a></li>
                     </ul>                   
                 </li>
               </ul>
