--- a/invoicesproject/templates/includes/header.html
+++ b/invoicesproject/templates/includes/header.html
@@ -11,6 +11,7 @@
                     <ul class="menu">
                         <li><a href="{% url 'client_app:client-list' %}">Listado</a></li>
                         <li><a href="{% url 'client_app:client-add' %}">Nuevo</a></li>
+                        <li><a href="{% url 'invoice_app:invoice-list' %}">Facturas</a></li>
                     </ul>                   
                 </li>
               </ul>
