--- a/invoicesproject/templates/invoice/detail.html
+++ b/invoicesproject/templates/invoice/detail.html
@@ -23,6 +23,9 @@
                             <th width="50">Código de factura</th>
                             <th width="50">Fecha</th>
                             <th width="50">Importe bruto</th>
+                            <th width="50">Importe IRPF</th>
+                            <th width="50">Importe IVA</th>
+                            <th width="50">Importe neto</th>
                         </tr>
                     </thead>
                     <tbody>               
@@ -31,12 +34,33 @@
                             <td>{{ invoice.code }}</td>
                             <td>{{ invoice.date }}</td>
                             <td>
-                                {% if inv.total_price is None %}
+                                {% if invoice.total_amount is None %}
                                     0
                                 {% else %}
-                                    {{ invoice.total_price }}
-                                {% endif %}                                
-                            </td>                          
+                                    {{ invoice.total_amount }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if invoice.total_irpf_amount is None %}
+                                    0
+                                {% else %}
+                                    {{ invoice.total_irpf_amount }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if invoice.total_iva_amount is None %}
+                                    0
+                                {% else %}
+                                    {{ invoice.total_iva_amount }}
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if invoice.total_net_amount is None %}
+                                    0
+                                {% else %}
+                                    {{ invoice.total_net_amount }}
+                                {% endif %}
+                            </td>                        
                         </tr>
                     </tbody>
                 </table>
@@ -55,12 +79,11 @@
                 <table class="hover">
                     <thead>
                         <tr>
-                            <th width="50">Id</th>
                             <th width="50">Importe bruto</th>
                             <th width="50">Importe neto</th>
-                            <th width="50">IRPF</th>
+                            <th width="50">% IRPF</th>
                             <th width="50">Importe IRPF</th>
-                            <th width="50">IVA</th>
+                            <th width="50">% IVA</th>
                             <th width="50">Importe IVA</th>
                             <th width="50"></th>
                         </tr>
@@ -69,7 +92,6 @@
                         {% for line in invoice_lines  %}   
                             {% if line.invoice_invoiceline__amount is not None %}
                             <tr>
-                                <td>{{ line.invoice_invoiceline__id }}</td>
                                 <td>{{ line.invoice_invoiceline__amount }}</td>
                                 <td>{{ line.invoice_invoiceline__net_amount }}</td>
                                 <td>{{ line.invoice_invoiceline__irpf }}</td>
@@ -99,7 +121,7 @@
                             </td>
                         </tr>                        
                         {% endfor %}
-                    </tbody>
+                    </tbody> 
                 </table>
             </div>
             <!-- FIN bloque de resultados de busqueda -->
